--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <!--<div id="asciiContainer">
       <iframe class="ascii-art" src=troy.txt>
     </div>-->
-    <div id="socials" style="display: none;">
-      <button id="email" class="social-button" onclick="window.location.href = 'mailto:troy@ekinney.com';">
+    <div id="socials" style="display: flex;">
+      <button id="email" class="social-button" style="display: none;" onclick="window.location.href = 'mailto:troy@ekinney.com';">
         <span id="email-icon" class="icon"><i class="fa-solid fa-envelope"></i></span>
       </button>
-      <button id="linkedIn" class="social-button" onclick="window.location.href = 'https://www.linkedin.com/in/troy-e-kinney';">
+      <button id="linkedIn" class="social-button" style="display: none;" onclick="window.location.href = 'https://www.linkedin.com/in/troy-e-kinney';">
         <span id="linkedIn-icon" class="icon"><i class="fa-brands fa-square-linkedin"></i></span>
       </button>
-      <button id="github" class="social-button" onclick="window.location.href = 'https://www.github.com/treki722';">
+      <button id="github" class="social-button" style="display: none;" onclick="window.location.href = 'https://www.github.com/treki722';">
         <span id="github-icon" class="icon"><i class="fa-brands fa-github"></i></span>
       </button>
     </div>
@@ -119,9 +119,17 @@
         descriptionIndex++;
         setTimeout(typeDescription, speed);
       } else {
-        document.getElementById("options").style.display = "inline-block";
-        document.getElementById("socials").style.display = "flex";
         document.getElementById("desc").innerHTML = document.getElementById("desc").innerHTML.slice(0, -1);
+        setTimeout(() => {
+          document.getElementById("email").style.display = "flex";
+        }, speed);
+        setTimeout(() => {
+          document.getElementById("linkedIn").style.display = "flex";
+        }, speed);
+        setTimeout(() => {
+          document.getElementById("github").style.display = "flex";
+        }, speed);
+        document.getElementById("options").style.display = "inline-block";
       }
     }
 
