adjusted speed for buttons to show up

--- a/index.html
+++ b/index.html
@@ -122,14 +122,16 @@
         document.getElementById("desc").innerHTML = document.getElementById("desc").innerHTML.slice(0, -1);
         setTimeout(() => {
           document.getElementById("email").style.display = "flex";
-        }, speed);
+        }, 300);
         setTimeout(() => {
           document.getElementById("linkedIn").style.display = "flex";
-        }, speed);
+        }, 300);
         setTimeout(() => {
           document.getElementById("github").style.display = "flex";
-        }, speed);
-        document.getElementById("options").style.display = "inline-block";
+        }, 300);
+        setTimeout(() => {
+          document.getElementById("options").style.display = "inline-block";
+        }, 300);
       }
     }
 
