--- a/resume.html
+++ b/resume.html
@@ -40,16 +40,22 @@
     <section>
         <h2>Experience</h2>
         <p><strong>Oakhouse Church</strong> — Audio & Lighting Tech<br><em>2022–Present</em><br>
-        Operate sound, lighting, and projection systems for weekly services. Run Onyx for lighting control & design cues within Onyx taking advantage of FX, dimming, rgba & rgbw lightins. Assist with livestream tech. Provide support for AV setup, teardown, and stage management.</p>
+        Operate sound, lighting, and projection systems for weekly services. Run Onyx for lighting control & design cues within Onyx taking advantage of FX, dimming, rgba & rgbw lights. Assist with livestream tech. Provide support for AV setup, teardown, and stage management.</p>
         
         <p><strong>ASB Tech Team, Aliso Niguel HS</strong> — AV Operator<br><em>2023–Present</em><br>
         Mix audio, run lights, and manage technical systems for school events. Coordinate with student leadership to execute assemblies, rallies, and productions.</p>
+
+        <p><strong>National Honors Social Executive Council, Aliso Niguel HS</strong> - EC of Technology<br><em>2025–Present</em><br>
+        Help mantain member records, attendance, the Canvas page, the website, and file management.</p>
+
+        <p><strong>California Scholarship Federation Executive Council, Aliso Niguel HS</strong> - EC of Technology<br><em>2025–Present</em><br>
+        Help mantain member records, attendance, the Canvas page, the website, and file management. Help automate processes using Google Apps Scripts between Google Forms and Google Sheets.</p>
     </section>
 
     <section>
         <h2>Projects</h2>
-        <p><strong>Smart Power Distro Unit (In Progress)</strong><br>
-        Designing an ESP32-powered rackmount distro with touchscreen interface and 6x 20A circuit monitoring. Includes live amp/watt readout, system logs, and interactive UI.</p>
+        <!-- <p><strong>Smart Power Distro Unit (In Progress)</strong><br>
+        Designing an ESP32-powered rackmount distro with touchscreen interface and 6x 20A circuit monitoring. Includes live amp/watt readout, system logs, and interactive UI.</p> -->
 
         <p><strong>Lorelobby</strong><br>
         Interactive lorefinding game sent via text message, hosted via github.</p>
@@ -61,9 +67,13 @@
     <section>
         <h2>Skills</h2>
         <ul>
-            <li>Live Audio (Behringer WING, X32, Allen & Heath SQ7)</li>
-            <li>Lighting Design (Chauvet, Obsidian Onyx, DMX)</li>
+            <li>Live Audio (Behringer WING, Behringer X32 - Compact & Rack, Allen & Heath Qu-32)</li>
+            <li>Digital Audio Workspaces (Ableton Live, Harrison LiveTrax)</li>
+            <li>Live Video (Blackmagic Design Atem systems)</li>
+            <li>Video Filming & Editing (Film on iPhone; Edit in Blackmagic Design DaVinci Resolve for PC and iPad)</li>
+            <li>Lighting Design (Lightkey, Obsidian Onyx)</li>
             <li>Web Development (HTML, CSS, JavaScript, GitHub)</li>
+            <li>Google Apps Suite (Drive, Sheets, etc; Google Apps Scripts)</li>
             <li>Soldering, rack design, touch UI integration</li>
             <li>Event setup, crowd experience, creative tech design</li>
         </ul>
@@ -80,7 +90,7 @@
     
     <section>
         <h2>Education</h2>
-        <p><strong>Aliso Niguel High School</strong> — Sophomore<br>Graduating Class of 2027</p>
+        <p><strong>Aliso Niguel High School</strong> — Junior<br>Graduating Class of 2027</p>
     </section>
 
     <section>
