--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@
     const titleText = "Hi! I'm Troy Kinney.";
     const description = "I'm a high school developer and tech nerd. Feel free to look around.";
 
-    const philosophyText = "I used to be a big-time procrastinater, and all though I still am at heart, I understand when it really is better to just get the job done. \n I believe it is important to always be ontop of your work & ahead of due dates, preventing late completions and any other issues that may arise.";
+    const philosophyText = `
+    I used to rely on last-minute adrenaline to get things done. It worked—until it didn't. I eventually realized that procrastination kills potential. Ideas don't fail because they're bad. They fail because they're late, rushed, or never finished at all. So I made the choice to work differently: to stay ahead, take control of my time, and execute with purpose.
+
+    I care about mastery. If I'm going to build something, I want it done right. Precision matters. Details matter. Cutting corners is just another form of procrastination—one that shows up later as bugs, delays, and chaos. When things break, I don't panic or point fingers. I diagnose, debug, and fix. If it's a missed line of code, I correct it. If the system is flawed, I rebuild it. And when I hit a wall, I don't stop—I rubber-duck, rethink, and only then reach out for help. Growth comes from staying curious, not complacent.
+
+    I believe discipline is a form of respect: respect for the work, for the people counting on me, and for the standards I hold myself to. I stay ahead of deadlines because momentum is easier to protect than to rebuild. Being reliable isn't about being perfect—it's about being prepared.
+
+    My promise is simple: I will deliver on time with extreme precision. I don't chase busywork or half-finished ideas. I build systems that last, projects that work, and results that speak for themselves. I'm not interested in "good enough." I'm here to execute, improve, and push for better every single time.
+
+    This is the mindset I bring to my work: organized, intentional, and relentless about getting things done the right way.
+    `;
     const referencesText = "This is a placeholder";
+    
+
     
     const speed = 35;
   
