adjusted main page content width

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
     </div>
     <div id="contentContainer">
-      <p id="content" style="text-align:center; display:none;"></p>
+      <p id="content" style="text-align:center; display:none; width:66%"></p>
     </div>
   </div>
 
