--- a/work.html
+++ b/work.html
@@ -23,11 +23,14 @@
         <p><strong>ASB Tech Team, Aliso Niguel HS</strong>
         Create new processes for events such as football games or pep rallies \n Created new documentation to make everything accesible for those to come after me</p>
 
-        <p><strong><a href="https://lorelobby.troyekinney.com">Lorelobby</a></strong><br>
-        Interactive lorefinding game sent via text message, hosted via github.</p>
+        <!-- <p><strong><a href="https://lorelobby.troyekinney.com">Lorelobby</a></strong><br>
+        Interactive lorefinding game sent via text message, hosted via github.</p> -->
 
         <p><strong>Personal Website</strong> — <a href="https://troyekinney.com">troyekinney.com</a><br>
         This portfolio is a great example of my work, I code & design.</p>
+
+        <p><strong>Bell Circle</strong> - <a href="https://bell-circle.com">bell-circle.com</a><br>
+        An example of one of my projects that solved an existing problem. Accurately and cleanly show's the days schedules for multiple schools and automatically pulls special schedules from an airtable API.</p>
     </section>    
   
     <script>
