centered content on home page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- <button onclick="contentDeterminer('references')">References</button> -->
       <script src="https://kit.fontawesome.com/6ba8d5bf94.js" crossorigin="anonymous"></script>
     </div>
-    <div id="contentContainer">
+    <div id="contentContainer" style="display: flex; justify-content: center;">
       <p id="content" style="text-align:center; display:none; width:66%"></p>
     </div>
   </div>
