--- a/work.html
+++ b/work.html
@@ -58,20 +58,24 @@
             }, 600);
         }
 
-        // Initial icon
-        window.onload = function() {
-            const isDark = document.body.classList.contains('dark-mode') ||
-                window.matchMedia('(prefers-color-scheme: dark)').matches;
+        function applyTheme(isDark) {
+            document.body.classList.toggle('dark-mode', isDark);
             setIcon(isDark);
+        }
+        // Initial theme and icon
+        window.onload = function() {
+            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            document.body.classList.toggle('dark-mode', prefersDark);
+            setIcon(prefersDark);
             window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
+                document.body.classList.toggle('dark-mode', e.matches);
                 setIcon(e.matches);
             });
         };
 
         function toggleDarkMode() {
-            document.body.classList.toggle('dark-mode');
             const isDark = document.body.classList.contains('dark-mode');
-            setIcon(isDark);
+            applyTheme(!isDark); // Toggle the theme!
         }
     </script>
 </body>
