--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div id="options" style="display: none; margin-top:15px; margin:30px;">
       <button onclick="window.location.href = 'https://www.troyekinney.com/work.html';">Work</button>
-      <button onclick="window.location.href = 'https://www.troyekinney.com/involvements.html';">Involvements</button>
+      <!-- <button onclick="window.location.href = 'https://www.troyekinney.com/involvements.html';">Involvements</button> -->
       <button onclick="contentDeterminer('philosophy')">Philosophy</button>
       <button onclick="window.location.href = 'https://www.troyekinney.com/resume.html';">Resume</button>
       <!-- <button onclick="contentDeterminer('references')">References</button> -->
